--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -24,6 +24,10 @@ jobs:
       - run: npm run test -- --coverage
       - run: npm run build
 
+      - uses: stepci/stepci@main
+        with:
+          workflow: "backend/stepci/workflow.yml"
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
