--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,6 +25,7 @@ jobs:
       - run: npm run build
 
       - run: node dist/index.js &
+      - run: npx wait-on -t 10000 http://localhost:8080/api/health
       - uses: stepci/stepci@main
         with:
           workflow: "backend/stepci/workflow.yml"
